--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <!--<app-nav></app-nav>-->
 
 <p>home works!</p>
+<p>Itt az első módosításom</p>
 <button (click)="loginService.logout()">Logout</button>
 
 <mat-slide-toggle  [checked]="true">Slide me!</mat-slide-toggle>
