--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,14 @@
-<p>Név: {{userData.name}}</p>
+<!-- <p>Név: {{userData.name}}</p> -->
+
+<div class="container" id="outside-div">
+    <div class="col-6 user " style="background-color: aquamarine;">
+        <!-- username, name, email address -->
+        <img src="profile-pic.jpg" alt="cica">
+        <p>Név: {{userData.name}}</p>
+    </div>
+
+    <div class="col-6 userDetails " style="background-color: blueviolet;">
+        <!-- more details -->
+        <p>Név: {{userData.name}}</p>
+    </div>
+</div>
